--- a/webang/app/index.html
+++ b/webang/app/index.html
@@ -13,8 +13,6 @@
 
         <!-- build:css(.tmp) styles/main.css -->
         <link rel="stylesheet" href="styles/main.css">
-        <link rel="stylesheet" href="bower_components/bootstrap-datepicker/css/datepicker.css">
-        <link rel="stylesheet" href="bower_components/bootstrap-timepicker/css/bootstrap-timepicker.css">
         <!-- endbuild -->
 </head>
   <body ng-app="webangApp">
@@ -35,9 +33,9 @@
         <div class="navbar-inner">
           <a class="brand" href="#">TaskIr</a>
           <ul class="nav">
+            <li data-match-route="/status"><a href="#/config">Status</a></li>
             <li data-match-route="/schedules"><a href="#/schedules">Schedules</a></li>
             <li data-match-route="/config"><a href="#/config">Config</a></li>
-            <li data-match-route="/about"><a href="#/config">About</a></li>
           </ul>
         </div>
       </div>
@@ -76,8 +74,6 @@
         <script src="bower_components/bootstrap-sass/js/bootstrap-scrollspy.js"></script>
         <script src="bower_components/bootstrap-sass/js/bootstrap-collapse.js"></script>
         <script src="bower_components/bootstrap-sass/js/bootstrap-tab.js"></script>
-        <script src="bower_components/bootstrap-datepicker/js/bootstrap-datepicker.js"></script>
-        <script src="bower_components/bootstrap-timepicker/js/bootstrap-timepicker.js"></script>
         <!-- endbuild -->
 
         <!-- build:js scripts/modules.js -->
@@ -85,14 +81,13 @@
         <script src="bower_components/angular-resource/angular-resource.js"></script>
         <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
         -->
-        <script src="bower_components/angular-strap/dist/angular-strap.js"></script>
+        <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
         <!-- endbuild -->
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/filters/weekly.js"></script>
-        <script src="scripts/directives\navbar.js"></script>
         <!-- endbuild -->
 </body>
 </html>
