Active flag in navbar, dummy config and status pages.

--- a/web/app/index.html
+++ b/web/app/index.html
@@ -33,7 +33,7 @@
         <div class="navbar-inner">
           <a class="brand" href="#">TaskIr</a>
           <ul class="nav">
-            <li data-match-route="/status"><a href="#/config">Status</a></li>
+            <li data-match-route="/status"><a href="#/status">Status</a></li>
             <li data-match-route="/schedules"><a href="#/schedules">Schedules</a></li>
             <li data-match-route="/config"><a href="#/config">Config</a></li>
           </ul>
@@ -87,6 +87,7 @@
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
+        <script src="scripts/directives/navbar.js"></script>
         <script src="scripts/filters/weekly.js"></script>
         <!-- endbuild -->
 </body>
