page rc to send buttons to ir receiver

--- a/web/app/index.html
+++ b/web/app/index.html
@@ -36,6 +36,7 @@
             <li data-match-route="/status"><a href="#/status">Status</a></li>
             <li data-match-route="/schedules"><a href="#/schedules">Schedules</a></li>
             <li data-match-route="/config"><a href="#/config">Config</a></li>
+            <li data-match-route="/rc"><a href="#/rc">RC</a></li>
           </ul>
         </div>
       </div>
